--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
   },
